# unitymatch

./: .gitignore  README.md  package.json
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/api/: urls.py
backend/apps/chat/: admin.py  models.py
backend/apps/chat/migrations/: 0001_initial.py  0002_message.py
backend/apps/discovery/: apps.py  serializers.py  urls.py  views.py
backend/apps/interests/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/interests/migrations/: 0001_initial.py
backend/apps/interests/services/: interest_service.py
backend/apps/matches/: admin.py  apps.py  models.py
backend/apps/matches/migrations/: 0001_initial.py
backend/apps/matches/services/: match_service.py
backend/apps/profiles/: admin.py  apps.py  models.py  photo_urls.py  serializers.py  tests.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py  0002_alter_profile_children_status_alter_profile_gender_and_more.py  0003_alter_profile_options_profile_profile_visibility_and_more.py  0004_profilephoto.py  0005_unique_primary_photo_per_profile.py
backend/apps/profiles/services/: photo_service.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py
backend/config/: settings.py  urls.py
docker/backend/: Dockerfile
docs/architecture/adr/: ADR-001-modular-monolith.md  (+4 more)
docs/engineering/: backend-engineering-standards.md  codex-prompt-template.md
infra/: README.md  docker-compose.yml
