[project]
name = "unitymatch-backend"
version = "0.1.0"
description = "Backend API for UnityMatch"
requires-python = ">=3.12,<3.13"

dependencies = [
    "django==6.0.2",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.9.0",
    "psycopg[binary]==3.3.2",
    "python-dotenv==1.2.1",
    "pillow==12.1.1",
]

[tool.uv]
package = false